Fixed align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,12 +8,6 @@
  */
  
  
- 
-
-p {
-	align: justify;
-}
-
 
 html {
   line-height: 1.15;
